--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
                     <li><a href="./JAVA%20cours%201%2C%20Module%202.html" class="hover:text-indigo-500 transition-colors">Cours 2</a></li>
                     <li><a href="./JAVA%20cours%201%2C%20Module%203.html" class="hover:text-indigo-500 transition-colors">Cours 3</a></li>
                     <li><a href="./JAVA%20cours%201%2C%20Module%204.html" class="hover:text-indigo-500 transition-colors">Cours 4</a></li>
-                    <li><a href="./JAVA%20cours%201%2C%20Question.html" class="hover:text-indigo-500 transition-colors">Questions</a></li>
                 </ul>
                 <h3 class="text-xl font-semibold mt-6 mb-2">Exercices</h3>
                 <ul class="space-y-2 text-gray-700">
@@ -55,7 +54,6 @@
                     <li><a href="./JAVA%20cours%202%2C%20Module%202.html" class="hover:text-indigo-500 transition-colors">Cours 2</a></li>
                     <li><a href="./JAVA%20cours%202%2C%20Module%203.html" class="hover:text-indigo-500 transition-colors">Cours 3</a></li>
                     <li><a href="./JAVA%20cours%202%2C%20Module%204.html" class="hover:text-indigo-500 transition-colors">Cours 4</a></li>
-                    <li><a href="./JAVA%20cours%202%2C%20Question.html" class="hover:text-indigo-500 transition-colors">Questions</a></li>
                 </ul>
                 <h3 class="text-xl font-semibold mt-6 mb-2">Exercices</h3>
                 <ul class="space-y-2 text-gray-700">
@@ -72,7 +70,6 @@
                     <li><a href="./JAVA%20cours%203%2C%20Module%202.html" class="hover:text-indigo-500 transition-colors">Cours 2</a></li>
                     <li><a href="./JAVA%20cours%203%2C%20Module%203.html" class="hover:text-indigo-500 transition-colors">Cours 3</a></li>
                     <li><a href="./JAVA%20cours%203%2C%20Module%204.html" class="hover:text-indigo-500 transition-colors">Cours 4</a></li>
-                    <li><a href="./JAVA%20cours%203%2C%20Question.html" class="hover:text-indigo-500 transition-colors">Questions</a></li>
                 </ul>
                 <h3 class="text-xl font-semibold mt-6 mb-2">Exercices</h3>
                 <ul class="space-y-2 text-gray-700">
@@ -90,7 +87,7 @@
 
                 <h3 class="text-xl font-semibold text-gray-800 mt-6">Projet</h3>
                 <ul class="list-disc list-inside ml-6 space-y-2">
-                    <li><a href="/Projet%20M1.html" class="hover:text-indigo-500 transition-colors font-medium">Projet Final</a></li>
+                    <li><a href="./Projet%20M1.html" class="hover:text-indigo-500 transition-colors font-medium">Projet Final</a></li>
                 </ul>
             </div>
         </section>
